# python-cicd-devops

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yaml
src/simple_http_checker/: __init__.py  checker.py  cli.py
tests/: test_checker.py  test_cli.py
