[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-http-checker"
version = "0.1.0"
description = "A simple HTTP checker for monitoring website availability."
authors = [
    { name = "Yeison Lopez", email = "yeison.lopez1028@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "requests>=2.28,<3.0",
    "click>=8.0,<9.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "black",
    "mypy",
    "types-requests",
    "bandit",
]

[project.scripts]
check-urls="simple_http_checker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "__pycache", "build", "dist"]

[tool.pytest.ini_options]
addopts = "-rA -s -v"
pythonpath = ["src"]